Fix unread indicators on Safari

--- a/app/notes/Notes.module.css
+++ b/app/notes/Notes.module.css
@@ -1,4 +1,8 @@
 /* UnreadIndicator */
+a.link {
+  position: relative;
+}
+
 a.link:hover div {
   animation: rotate 3s linear infinite;
 }
